--- a/styles/_blogs.scss
+++ b/styles/_blogs.scss
@@ -62,87 +62,6 @@
         }
     }
   
-    .masthead {
-        // TIP: Background images are set within the HTML using inline CSS!
-        background: no-repeat center center;
-        background-color: $gray-600;
-        background-attachment: scroll;
-        position: relative;
-        @include background-cover;
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 100%;
-            background-color: $gray-900;
-            opacity: 0.5;
-        }
-        .page-heading,
-        .post-heading,
-        .site-heading {
-            padding: 200px 0 150px;
-            color: white;
-            @media only screen and (min-width: 768px) {
-            padding: 200px 0;
-            }
-        }
-        .page-heading,
-        .site-heading {
-            text-align: center;
-            h1 {
-                font-size: 50px;
-                margin-top: 0;
-                font-weight: 700;
-            }
-            .subheading {
-                font-size: 24px;
-                font-weight: 300;
-                line-height: 1.1;
-                display: block;
-                margin: 10px 0 0;
-            }
-            @media only screen and (min-width: 768px) {
-                h1 {
-                    font-size: 80px;
-                }
-            }
-        }
-        .post-heading {
-            h1 {
-                font-size: 35px;
-            }
-            .meta,
-            .subheading {
-                line-height: 1.1;
-                display: block;
-            }
-            .subheading {
-                font-size: 24px;
-                font-weight: 600;
-                margin: 10px 0 30px;
-            }
-            .meta {
-                font-size: 20px;
-                font-weight: 300;
-                font-style: italic;
-        
-                a {
-                    color: $white;
-                }
-            }
-            @media only screen and (min-width: 768px) {
-            h1 {
-                font-size: 55px;
-            }
-            .subheading {
-                font-size: 30px;
-            }
-            }
-        }
-    }
-  
-  
     // Styling for the footer
     footer {
         padding: 50px 0 65px;
@@ -157,9 +76,89 @@
         }
     }
 }
+  
+.masthead {
+    // TIP: Background images are set within the HTML using inline CSS!
+    background: no-repeat center center;
+    background-color: $gray-600;
+    background-attachment: scroll;
+    position: relative;
+    @include background-cover;
+    .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-color: $gray-900;
+        opacity: 0.5;
+    }
+    .page-heading,
+    .post-heading,
+    .site-heading {
+        padding: 200px 0 150px;
+        color: white;
+        @media only screen and (min-width: 768px) {
+        padding: 200px 0;
+        }
+    }
+    .page-heading,
+    .site-heading {
+        text-align: center;
+        h1 {
+            font-size: 50px;
+            margin-top: 0;
+            font-weight: 700;
+        }
+        .subheading {
+            font-size: 24px;
+            font-weight: 300;
+            line-height: 1.1;
+            display: block;
+            margin: 10px 0 0;
+        }
+        @media only screen and (min-width: 768px) {
+            h1 {
+                font-size: 80px;
+            }
+        }
+    }
+    .post-heading {
+        h1 {
+            font-size: 35px;
+        }
+        .meta,
+        .subheading {
+            line-height: 1.1;
+            display: block;
+        }
+        .subheading {
+            font-size: 24px;
+            font-weight: 600;
+            margin: 10px 0 30px;
+        }
+        .meta {
+            font-size: 20px;
+            font-weight: 300;
+            font-style: italic;
+    
+            a {
+                color: $white;
+            }
+        }
+        @media only screen and (min-width: 768px) {
+        h1 {
+            font-size: 55px;
+        }
+        .subheading {
+            font-size: 30px;
+        }
+        }
+    }
+}
 
 //BLOG EDITOR PAGE
-.blog-editor-page {
+.blog-editor-page, .blog-detail-page {
 
     @media only screen and (min-width: 991px){
         .editor-wrapper {
@@ -180,4 +179,33 @@
         margin-right: 0px;
         padding-left: 10px;
     }    
+}
+
+// BLOG USER PAGE
+.base-page {
+    &.blog-user-page {
+        padding-top: 50px;
+    }
+
+    .user-blog-list {
+        list-style: none;
+        padding-left: 0px;
+
+        > li {
+            color: black;
+            font-size: 28px;
+        }
+
+        a {
+            color: #424242
+        }
+    }
+
+    .blog-status-title {
+        font-weight: bold;
+    }
+
+    .port-dropdown {
+        margin-left: 10px;
+    }
 }
