--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -34,9 +34,37 @@
             }
         }
     }
+
+    .port-dropdown-menu {
+
+        .port-dropdown-item {
+            color: #4e4e4e;
+
+            &.active {
+                color: #dba919;
+            }
+        }
+
+        .port-dropdown-toggle{
+            color: white;
+            margin-right: 10px;
+
+            &:hover, &:focus {
+                color: #dba919;
+            }
+        }
+    }
 }
 
 .port-navbar.port-nav-base.port-nav-default {
     padding: 30px;
     background-color: $secondary !important;
+}
+
+.bg-transparent.menu-open {
+    background-color: $secondary !important;
+}
+
+.bg-transparent.menu-close {
+    transition: 1s;
 }
