--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -76,6 +76,7 @@
 @media (max-width: 991px) {
     .hero-section {
         width: 341px;
+        height: 445px;
 
         &-content {
             width: 341px;
@@ -87,9 +88,9 @@
     }
 }
 
-.background-image {
+.background-image > img {
     position: absolute;
-    width: 1762px;
+    width: 1024px;
     height: 493px;
 }
 
@@ -111,4 +112,46 @@
 .shadow-custom-2 {
     border: 2px solid #f37d49;
     box-shadow: -17px 13px 41px rgba(13,78,158,0.3);
+}
+
+.cover-1 {
+    background-image: linear-gradient(45deg, rgb(254, 202, 83), rgb(253, 157, 97));
+}
+
+.flipper {
+    position: relative;
+    transform-style: preserve-3d;
+    transition: 1s;
+}
+
+.flipper.isFlipping {
+    transform: rotateY(-180deg)
+}
+
+.front, .back {
+    backface-visibility: hidden;
+    left: 0;
+    position: absolute;
+    top: 0;
+}
+
+.front {
+    transform: rotateY(0deg);
+    z-index: 9999;
+}
+
+.back {
+    transform: rotateY(180deg)
+}
+
+.service-link {
+    bottom: 0px;
+    color: white;
+    font-size: 13px;
+    font-style: italic;
+    position: absolute;
+
+    > a {
+        color: white;
+    }
 }
