--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,3 @@
-//FONTS
-@import './shared/fonts';
-
 //COLORS
 @import './shared/colors';
 
@@ -18,20 +15,12 @@
 @import './header';
 @import './slate-editor';
 
-.montserrat-loaded {
-    html, body {
-        height: 100%;
-        width: 100%;
-        font-family: "Montserrat", "Helvetica"
-    }
-}
-
 html, body {
     height: 100%;
     width: 100%;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    font-family: -apple-system, BlinkMacSystemFont, "Montserrat", "Segoe UI", "Roboto", "Oxygen",
+        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica", "Helvetica Neue",
         sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
